# msfe_simulation

./: .gitignore  LICENSE  README.md  pyproject.toml  streamlit_app.py
src/msfe_simulator/: __init__.py  __main__.py  app.py  cli.py  metrics.py  model.py  plot_generation.py  sensitivity.py  validation.py
