[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msfe-simulator"
version = "0.1.0"
description = "Simulation of mid-spatial-frequency errors from grinding process"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Adarsh Naduvilatt" }
]
license = { text = "MIT" }
keywords = ["MSFE", "grinding", "simulation", "streamlit", "surface-metrology"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "scipy>=1.10",
  "streamlit>=1.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[project.scripts]
msfe-app = "msfe_simulator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]
